Fixed jumpy map
Changes:
- Changed .sidenav-active #map {...} style to width: 100% from 80%

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -311,7 +311,7 @@ span.icon {
 
 .sidenav-active #map {
   margin-left: 20%;
-  width: 80%; }
+  width: 100%; }
 
 .sidenav-active .hamburger-top {
   position: fixed;
