--- a/public/sass/navbar/_navbar.scss
+++ b/public/sass/navbar/_navbar.scss
@@ -86,7 +86,7 @@ span.icon {
 	}
 	#map {
 		margin-left: 20%;
-		width: 80%;
+		width: 100%;
 	}
 	.hamburger-top {
 		position: fixed;
